# qworker

./: .bumpversion.cfg  .gitignore  .isort.cfg  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  start.py  start.sh
.claude/commands/: sdd-task.md
.github/workflows/: publish-pypi.yml  release.yml
docs/: api.rst  authors.rst  changelog.rst  code-of-conduct.rst  conf.py  config.rst  index.rst  kubernetes-alb-health-checks.md  requirements-dev.txt  requirements.txt  security.rst
examples/: discovery.py  health.py  test_asyncio.py  test_check.py  test_client.py  test_decorator.py  test_discovery.py  test_email.py  test_health.py  test_keep.py  test_pubsub.py  test_qmanager.py  test_queue.py  test_runner.py  test_serpent.py  test_task.py
examples/bots/: test_bot.py
examples/broker/: test_client.py  test_producer.py
qw/: __init__.py  __main__.py  client.py  conf.py  decorators.py  discovery.py  exceptions.c  exceptions.pxd  exceptions.py  exceptions.pyx  health.py  process.py  protocols.py  server.py  state.py  supervisor.py  utils.py  version.py
qw/bots/: __init__.py  telegram.py
qw/broker/: consumer.py  producer.py  rabbit.py
qw/cli/: __init__.py  info.py
qw/executor/: __init__.py
qw/queues/: __init__.py  manager.py  policy.py
qw/utils/: __init__.py  events.py  functions.py  json.cpp  json.pyx  versions.py
qw/wrappers/: __init__.py  base.py  di.py  di_task.py  func.py
sdd/proposals/: expose-queue-threads.brainstorm.md
sdd/specs/: dynamic-queue-sizing.spec.md  expose-queue-threads.spec.md  fix-qworker-queue-handler.spec.md  process-supervisor.spec.md  uv-migration.spec.md
sdd/tasks/: .index.json
sdd/tasks/active/: TASK-001-pure-python-exceptions.md  TASK-002-remove-json-rewire-imports.md  TASK-003-cython-artifact-cleanup.md  TASK-004-pyproject-toml-migration.md  TASK-005-remove-setup-py.md  TASK-006-makefile-modernization.md  TASK-007-release-yml-fix.md  TASK-008-manifest-in-update.md  TASK-009-state-tracker.md  TASK-010-spawnprocess-manager.md  TASK-011-qworker-state-instrumentation.md  TASK-012-queue-manager-instrumentation.md  TASK-013-broker-state-instrumentation.md  TASK-014-cli-info-command.md  TASK-015-qclient-info-and-integration.md  TASK-016-queue-grow-config.md  TASK-017-queue-size-policy.md  TASK-020-resilient-queue-handler.md  TASK-021-consumer-monitor.md  TASK-022-observability-wiring.md  TASK-024-supervisor-config.md  TASK-025-state-tracker-extensions.md  TASK-026-queue-manager-ledger.md  TASK-027-qworker-heartbeat-draining.md  TASK-028-process-supervisor.md  TASK-029-spawnprocess-integration.md  TASK-030-health-draining-supervisor-endpoint.md  TASK-031-integration-tests.md
sdd/tasks/completed/: TASK-001-pure-python-exceptions.md  TASK-002-remove-json-rewire-imports.md  TASK-003-cython-artifact-cleanup.md  TASK-004-pyproject-toml-migration.md  TASK-005-remove-setup-py.md  TASK-006-makefile-modernization.md  TASK-007-release-yml-fix.md  TASK-008-manifest-in-update.md  TASK-009-state-tracker.md  TASK-010-spawnprocess-manager.md  TASK-011-qworker-state-instrumentation.md  TASK-012-queue-manager-instrumentation.md  TASK-013-broker-state-instrumentation.md  TASK-014-cli-info-command.md  TASK-015-qclient-info-and-integration.md  TASK-016-queue-grow-config.md  TASK-018-queue-manager-dynamic-sizing.md  TASK-019-observability-wiring.md  TASK-020-resilient-queue-handler.md  TASK-021-consumer-monitor.md  TASK-023-consumer-resilience-tests.md  TASK-024-supervisor-config.md  TASK-025-state-tracker-extensions.md  TASK-026-queue-manager-ledger.md  TASK-027-qworker-heartbeat-draining.md  TASK-028-process-supervisor.md  TASK-029-spawnprocess-integration.md  TASK-030-health-draining-supervisor-endpoint.md  TASK-031-integration-tests.md
sdd/templates/: brainstorm.md  proposal.md  spec.md  task.md
templates/: .compiled  fontlist-v330.json
tests/: test_cli_info.py  test_consumer_resilience.py  test_dynamic_queue_integration.py  test_health_supervisor.py  test_heartbeat.py  test_info_integration.py  test_queue_manager_dynamic.py  test_queue_manager_ledger.py  test_queue_policy.py  test_state_tracker.py  test_supervisor.py  test_supervisor_integration.py
